# modern_cpp_io_files_classes

./: README.md  Test  float_images_io_example.cpp  out.txt  reading_from_binary_files.cpp  reading_from_ifstream.cpp  writing_into_text_files.cpp  writing_to_binary_files.cpp
example_opencv/: CMakeLists.txt  main.cpp  sift_extraction_with_opencv.cpp
homework_5/: CMakeLists.txt
homework_5/include/: compute_sifts.hpp  homework_5.h
homework_5/src/: compute_sifts.cpp  convert_dataset.cpp  main.cpp  serialize.cpp
